<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    tools:context=".activity.MainActivity">

    <tcking.github.com.giraffeplayer2.VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/model3dButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:adjustViewBounds="false"
        android:background="#00FFFFFF"
        android:contentDescription="@string/model_3d_button_comment"
        android:scaleType="centerInside"
        android:src="@drawable/off_3d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/off_3d" />

    <TextView
        android:id="@+id/model3dComment"
        style="@style/NormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/off_model_3d_comment"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/model3dButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.shy.rockerview.MyRockerView
        android:id="@+id/carRocker"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        app:areaBackground="#40000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rockerBackground="@color/white"
        app:rockerCallBackMode="CALL_BACK_MODE_STATE_CHANGE"
        app:rockerScale="0.5"
        app:rockerSpeedLevel="10" />

    <com.shy.rockerview.MyRockerView
        android:id="@+id/rotateRocker"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:areaBackground="#40000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:rockerBackground="@color/white"
        app:rockerCallBackMode="CALL_BACK_MODE_STATE_CHANGE"
        app:rockerScale="0.5"
        app:rockerSpeedLevel="10" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/cameraComment"
            style="@style/NormalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_comment"
            android:textColor="#FFFFFF"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/cameraImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="camera image"
            app:srcCompat="@drawable/camera" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/bulbButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="2dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="@string/bulb_button_comment"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/roadBlockButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/off_bulb" />

    <ImageButton
        android:id="@+id/roadBlockButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="40dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="@string/road_block_button_comment"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/off_roadblock" />

    <TextView
        android:id="@+id/bulbComment"
        style="@style/NormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/off_bulb_comment"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/roadBlockComment"
        app:layout_constraintStart_toEndOf="@+id/bulbButton" />

    <TextView
        android:id="@+id/roadBlockComment"
        style="@style/NormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/off_road_block_comment"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roadBlockButton" />

</androidx.constraintlayout.widget.ConstraintLayout>