<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    tools:context=".activity.ConnectActivity">

    <Button
        android:id="@+id/connectButton"
        style="@style/BigTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="220dp"
        android:text="@string/connect_button"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="128dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ipPrompt"
            style="@style/BigTextStyle"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/ip" />

        <EditText
            android:id="@+id/ipInput"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/portPrompt"
            style="@style/BigTextStyle"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/port" />

        <EditText
            android:id="@+id/portInput"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>